--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "heroku": "^7.51.0",
     "jest": "26.6.0",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
