--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
 		"@testing-library/react": "^11.1.0",
 		"@testing-library/user-event": "^12.1.10",
 		"bootstrap": "^4.6.0",
-		"heroku": "^7.51.0",
 		"jest": "26.6.0",
 		"jquery": "^3.6.0",
 		"react": "^17.0.1",
@@ -19,6 +18,7 @@
 		"react-dom": "^17.0.1",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.1",
+		"sass": "^1.54.8",
 		"web-vitals": "^0.2.4"
 	},
 	"scripts": {
